fix: Hide overflow-x on large screens.

--- a/digital_meal/static/digital_meal/css/report.css
+++ b/digital_meal/static/digital_meal/css/report.css
@@ -116,3 +116,8 @@
         font-size: 2vw !important;
     }
 }
+@media screen and (max-width: 992px) {
+    .custom-overflow {
+        overflow-x: scroll;
+    }
+}
